added cirlce particels

--- a/html/main.html
+++ b/html/main.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1>Dive into a world of Sacred Geometry</h1>
-    <h2>explore</h2>
+    <div id="particle-container">
+        <h2 id="explore-button">explore</h2>
+    </div>
     <div class="bottom-home-bar">
         <h3>about</h3>
         <h3>personal</h3>
         <h3>chapters</h3>
     </div>
+    <script src="../javascript/main.js"></script>
 </body>
 </html>
