finished home page

--- a/html/main.html
+++ b/html/main.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Dive into a world of Sacred Geometry</h1>
     <div id="particle-container">
-        <h2 id="explore-button">explore</h2>
+        <a id="explore-button" href="./ch1.html">explore</a>
     </div>
     <div class="bottom-home-bar">
         <h3>about</h3>
