added slide down menu

--- a/html/ch1.html
+++ b/html/ch1.html
@@ -7,14 +7,21 @@
     <title>Sacred Geometry | Ch. 1</title>
 </head>
 <body>
-    <button id="menu-button">Menu</button>
-    <div id="overlay-menu" class="hidden">
-        <a href="./ch1.html">Chapter 1</a>
-        <a href="./ch2.html">Chapter 2</a>
-        <a href="./ch3.html">Chapter 3</a>
+    <div class="top-bar">
+        <h3>Ch. 1</h3>
+        <button id="menu-button" class="simple-button" class="down">
+            <img src="../img/arrow.png" class="arrow">
+        </button>
+        <div id="overlay-menu" class="hidden">
+            <a href="./ch1.html">Chapter 1</a>
+            <a href="./ch2.html">Chapter 2</a>
+            <a href="./ch3.html">Chapter 3</a>
+        </div>
     </div>
     <h1 id="top-text">Dive into a world of Sacred Geometry</h1>
-    <div></div>
+    <div class="bottom-bar">
+        <a href="./main.html">
+    </div>
     <script src="../javascript/ch1.js"></script>
 </body>
 </html>
