fixed drop down menu

--- a/html/ch1.html
+++ b/html/ch1.html
@@ -9,8 +9,8 @@
 <body>
     <div class="top-bar">
         <h3>Ch. 1</h3>
-        <button id="menu-button" class="simple-button" class="down">
-            <img src="../img/arrow.png" class="arrow">
+        <button id="menu-button" class="simple-button">
+            <img src="../img/arrow.png" id='arrow-img' class="arrow rotate">
         </button>
         <div id="overlay-menu" class="hidden">
             <a href="./ch1.html">Chapter 1</a>
@@ -18,7 +18,7 @@
             <a href="./ch3.html">Chapter 3</a>
         </div>
     </div>
-    <h1 id="top-text">Dive into a world of Sacred Geometry</h1>
+    <h1 id="top-text">A curious point</h1>
     <div class="bottom-bar">
         <a href="./main.html">
     </div>
