--- a/html/ch1.html
+++ b/html/ch1.html
@@ -20,7 +20,7 @@
     </div>
     <h1 id="top-text">A curious point</h1>
     <div class="bottom-bar">
-        <a href="./main.html">
+        <a href="./main.html">Home</a>
     </div>
     <script src="../javascript/ch1.js"></script>
 </body>
