--- a/html/ch5.html
+++ b/html/ch5.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/chapters.css">
-    <title>Sacred Geometry | Ch. 1</title>
+    <title>Sacred Geometry | Ch. 5</title>
 </head>
 <body>
     <div class="top-bar">
-        <h3>Ch. 1</h3>
+        <h3>Ch. 5</h3>
         <button id="menu-button" class="simple-button">
             <img src="../img/arrow.png" id='arrow-img' class="arrow rotate">
         </button>
@@ -21,14 +21,10 @@
         </div>
     </div>
 
-    <h1 id="intro-text">Chapter 1 &nbsp;-&nbsp; <em>A Curious Point</em></h1>
-
-
-    <div id="box-text"></div>
-
 
     <div class="box">
-        <div id="box-graphics"></div>
+        <div class="box-text"></div>
+        <div class="box-graphics"></div>
     </div>
 
 
